cryptic.css
.puzzle-board {
  border: 1px solid black;
  border-collapse: collapse;
}

.puzzle-cell {
  border: 1px solid black;
  position: relative;
}

.puzzle-cell[active="selected"] {
  background-color: rgb(135, 206, 250);
}

.puzzle-cell[active="close"] {
  background-color: rgb(227, 227, 227);
}

.puzzle-item {
  position: relative;
  width: 2em;
  height: 2em;
}

.puzzle-cell[blank="true"] {
  background-color: black;
}

.puzzle-num {
  position: relative;
  padding-left: 1px;
  padding-top: 0px;
  top: 0;
  left: 0;
  font-size: 10pt;
}

.puzzle-text {
  position: absolute;
  top: 0.7em;
  left: 0.6em;
}

.columns {
  -moz-column-width: 20em;
  -moz-column-gap: 3em;
  -webkit-column-width: 20em;
  -webkit-column-gap: 3em;
  display: block;
  height: auto;
}

.largecolumns {
  -moz-column-width: 32em;
  -moz-column-gap: 3em;
  -webkit-column-width: 32em;
  -webkit-column-gap: 3em;
  height: 90%;
}

#crosswordEntry {
  opacity: 0;
}

